[gd_scene load_steps=2 format=3 uid="uid://c8xqk7m2vwdnp"]

[ext_resource type="Script" path="res://_ui/build_piece_card.gd" id="1_card"]

[node name="BuildPieceCard" type="Button"]
custom_minimum_size = Vector2(140, 120)
script = ExtResource("1_card")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
theme_override_constants/separation = 4

[node name="IconContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IconRect" type="TextureRect" parent="VBoxContainer/IconContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TierBadge" type="Label" parent="VBoxContainer/IconContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 9
text = "T0"

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Piece Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 6

[node name="LockedOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)
